fix text alignment in direct messages

--- a/sass/direct-message.scss
+++ b/sass/direct-message.scss
@@ -21,3 +21,6 @@
   line-height: 1.6em; 	
 }
 
+.tweet-message .tweet-text {
+  margin-left: -24px;	
+}
